--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.robv.android.xposed.installer"
-    android:versionCode="4"
-    android:versionName="1.5" >
+    android:versionCode="5"
+    android:versionName="1.6" >
 
     <uses-sdk android:minSdkVersion="15" />
 
@@ -13,7 +13,8 @@
         android:label="@string/app_name" >
         <activity
             android:name=".XposedInstallerActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
