--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.robv.android.xposed.installer"
     android:versionCode="6"
-    android:versionName="1.7" >
+    android:versionName="1.7b3" >
 
     <uses-sdk android:minSdkVersion="15" />
 
