--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,10 +13,9 @@
         <activity
             android:name=".XposedInstallerActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
