--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,23 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="de.robv.android.xposed.installer"
     android:versionCode="15"
-    android:versionName="2.1.4" xmlns:tools="http://schemas.android.com/tools">
+    android:versionName="2.1.4" >
 
-    <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="15" tools:ignore="OldTargetApi"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-sdk
+        android:minSdkVersion="15"
+        android:targetSdkVersion="15"
+        tools:ignore="OldTargetApi" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" android:allowBackup="false">
+        android:label="@string/app_name" >
         <activity
-            android:name=".XposedInstallerActivity"
-            android:label="@string/app_name"
-            android:configChanges="orientation|screenSize">
+            android:name=".WelcomeActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".XposedInstallerActivity"
+            android:configChanges="orientation|screenSize" >
         </activity>
 
         <receiver android:name=".PackageChangeReceiver" >
