Downloader: load repository in a central place

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,8 @@
     <application
         android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:name=".XposedApp" >
         <activity
             android:name=".WelcomeActivity"
             android:label="@string/app_name" >
