--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,8 @@
 
     <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="15" tools:ignore="OldTargetApi"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-
+    <uses-permission android:name="android.permission.ACCESS_SUPERUSER" />
+    
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" android:allowBackup="false">
