large commit with basic download support and  more details on the UI

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -41,6 +41,12 @@
                 <data android:scheme="package" />
             </intent-filter>
         </receiver>
+
+        <receiver android:name=".DownloadReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
