--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-15
-android.library.reference.1=../XposedMods/XposedLibrary
+android.library.reference.1=../../android/sdk/extras/android/support/v7/appcompat
