--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="de.robv.android.xposed.installer"
-    android:versionCode="18"
-    android:versionName="2.2" >
+    android:versionCode="19"
+    android:versionName="2.3 beta1" >
 
     <uses-sdk
         android:minSdkVersion="15"
