--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,7 +43,7 @@
 			    <category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 			<intent-filter>
-			    <data android:scheme="http" android:host="repo.xposed.info" android:pathPrefix="/module" />
+			    <data android:scheme="http" android:host="repo.xposed.info" android:pathPrefix="/module/" />
 			    <category android:name="android.intent.category.DEFAULT" />
 			    <category android:name="android.intent.category.BROWSABLE" />
 			    <action android:name="android.intent.action.VIEW" />
