Use notification instead of toast on module updates
Also give Android 4.1+ users the possibility to reboot right from the
notification.

The toast message is still shown when the user enables/disables a module
because it happens when the user is already in the app. I think posting a
notification would rather confuse than help people.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -61,6 +61,8 @@
                 <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
             </intent-filter>
         </receiver>
+
+        <receiver android:name=".util.NotificationUtil$RebootReceiver" android:exported="false" />
     </application>
 
 </manifest>
