--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,7 +24,9 @@
 
         <activity
             android:name=".WelcomeActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -39,7 +41,8 @@
 
         <activity
             android:name=".DownloadDetailsActivity"
-            android:configChanges="orientation|screenSize">
+            android:configChanges="orientation|screenSize"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="de.robv.android.xposed.installer.DOWNLOAD_DETAILS" />
                 <data android:scheme="package" />
@@ -53,7 +56,8 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".PackageChangeReceiver" >
+        <receiver android:name=".PackageChangeReceiver"
+            android:exported="false" >
             <intent-filter>
                 <action android:name="android.intent.action.PACKAGE_ADDED" />
                 <action android:name="android.intent.action.PACKAGE_CHANGED" />
@@ -62,13 +66,16 @@
             </intent-filter>
         </receiver>
 
-        <receiver android:name=".DownloadReceiver">
+        <receiver android:name=".DownloadReceiver"
+            android:exported="true"
+            android:permission="android.permission.SEND_DOWNLOAD_COMPLETED_INTENTS" >
             <intent-filter>
                 <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
             </intent-filter>
         </receiver>
 
-        <receiver android:name=".util.NotificationUtil$RebootReceiver" android:exported="false" />
+        <receiver android:name=".util.NotificationUtil$RebootReceiver"
+            android:exported="false" />
     </application>
 
 </manifest>
