--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="de.robv.android.xposed.installer"
-    android:versionCode="33"
-    android:versionName="2.7 experimental1" >
+    android:versionCode="34"
+    android:versionName="3.0 alpha1" >
 
     <uses-sdk
         android:minSdkVersion="15"
