--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,6 @@
     android:versionName="3.0 alpha4" >
 
     <uses-sdk
-        android:minSdkVersion="15"
-        android:targetSdkVersion="15"
         tools:ignore="OldTargetApi" />
 
     <uses-permission android:name="android.permission.ACCESS_SUPERUSER"/>
@@ -19,7 +17,7 @@
         android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Dark"
+        android:theme="@style/Theme.XposedManager"
         android:name=".XposedApp" >
 
         <activity
