--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:22.2.1'
     compile 'com.android.support:recyclerview-v7:22.2.1'
     compile 'com.android.support:design:22.2.1'
+    compile 'com.github.machinarius:preferencefragment:0.1.1'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
