--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.2.1'
     compile 'com.android.support:design:22.2.1'
     compile 'com.github.machinarius:preferencefragment:0.1.1'
+    compile 'se.emilsjolander:stickylistheaders:2.7.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
