settings: launch settings as an activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".SettingsActivity" />
+
         <receiver android:name=".PackageChangeReceiver"
             android:exported="false" >
             <intent-filter>
