--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.XposedManager"
+        android:theme="@style/Theme.XposedInstaller"
         android:name=".XposedApp" >
 
         <activity
