--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "de.robv.android.xposed.installer"
         minSdkVersion 7
         targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
+        versionCode 37
+        versionName "3.0 alpha4"
     }
 
     buildTypes {
