--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="de.robv.android.xposed.installer"
-    android:versionCode="37"
-    android:versionName="3.0 alpha4" >
+    package="de.robv.android.xposed.installer" >
 
     <uses-sdk
         tools:ignore="OldTargetApi" />
