navigation: convert support and about fragments to activities to implement the correct naviation logic

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,10 @@
 
         <activity android:name=".SettingsActivity" />
 
+        <activity android:name=".SupportActivity" />
+
+        <activity android:name=".AboutActivity" />
+
         <receiver android:name=".PackageChangeReceiver"
             android:exported="false" >
             <intent-filter>
