--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,77 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="de.robv.android.xposed.installer" >
+<manifest
+    package="de.robv.android.xposed.installer"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-sdk
-        tools:ignore="OldTargetApi" />
+        tools:ignore="OldTargetApi"/>
 
     <uses-permission android:name="android.permission.ACCESS_SUPERUSER"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
+        android:name=".XposedApp"
         android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.XposedInstaller.Light"
-        android:name=".XposedApp" >
+        android:theme="@style/Theme.XposedInstaller.Light">
 
         <activity
             android:name=".WelcomeActivity"
-            android:label="@string/app_name"
             android:configChanges="orientation|screenSize"
-            android:exported="true" >
+            android:exported="true"
+            android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
         <activity
             android:name=".DownloadDetailsActivity"
             android:configChanges="orientation|screenSize"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
-                <action android:name="de.robv.android.xposed.installer.DOWNLOAD_DETAILS" />
-                <data android:scheme="package" />
-                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="de.robv.android.xposed.installer.DOWNLOAD_DETAILS"/>
+                <data android:scheme="package"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
             <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <data android:scheme="http" android:host="repo.xposed.info" android:pathPrefix="/module/" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
+                <action android:name="android.intent.action.VIEW"/>
+                <data
+                    android:host="repo.xposed.info"
+                    android:pathPrefix="/module/"
+                    android:scheme="http"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
             </intent-filter>
         </activity>
 
-        <activity android:name=".SettingsActivity" />
+        <activity android:name=".SettingsActivity"/>
 
-        <activity android:name=".SupportActivity" />
+        <activity android:name=".SupportActivity"/>
 
-        <activity android:name=".AboutActivity" />
+        <activity android:name=".AboutActivity"/>
 
-        <receiver android:name=".PackageChangeReceiver"
-            android:exported="false" >
+        <receiver
+            android:name=".PackageChangeReceiver"
+            android:exported="false">
             <intent-filter>
-                <action android:name="android.intent.action.PACKAGE_ADDED" />
-                <action android:name="android.intent.action.PACKAGE_CHANGED" />
-                <action android:name="android.intent.action.PACKAGE_REMOVED" />
-                <data android:scheme="package" />
+                <action android:name="android.intent.action.PACKAGE_ADDED"/>
+                <action android:name="android.intent.action.PACKAGE_CHANGED"/>
+                <action android:name="android.intent.action.PACKAGE_REMOVED"/>
+
+                <data android:scheme="package"/>
             </intent-filter>
         </receiver>
 
-        <receiver android:name=".DownloadReceiver"
+        <receiver
+            android:name=".DownloadReceiver"
             android:exported="true"
-            android:permission="android.permission.SEND_DOWNLOAD_COMPLETED_INTENTS" >
+            android:permission="android.permission.SEND_DOWNLOAD_COMPLETED_INTENTS">
             <intent-filter>
-                <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
+                <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
             </intent-filter>
         </receiver>
 
-        <receiver android:name=".util.NotificationUtil$RebootReceiver"
-            android:exported="false" />
+        <receiver
+            android:name=".util.NotificationUtil$RebootReceiver"
+            android:exported="false"/>
     </application>
 
 </manifest>
