bug fixes fixes rovo89/XposedInstaller#182 fixes rovo89/XposedInstaller#244 fixes rovo89/XposedInstaller#251 fixes rovo89/XposedInstaller#252 fixes rovo89/XposedInstaller#200

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     compile 'com.android.support:design:22.2.1'
     compile 'com.github.machinarius:preferencefragment:0.1.1'
     compile 'se.emilsjolander:stickylistheaders:2.7.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
