fix bug in release mode disabled proguard

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
-            proguardFiles 'proguard-project.txt'
+            minifyEnabled false
         }
     }
 }
