--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,10 @@ android {
 
     defaultConfig {
         applicationId "de.robv.android.xposed.installer"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 37
-        versionName "3.0 alpha4"
+        versionName "3.0 alpha4 by dvdandroid"
         project.ext.set("archivesBaseName", "XposedInstaller_by_dvdandroid");
     }
 
@@ -25,13 +25,14 @@ repositories {
 }
 
 dependencies {
-    compile 'com.android.support:cardview-v7:23.1.0'
-    compile 'com.android.support:recyclerview-v7:23.1.0'
-    compile 'com.android.support:design:23.1.0'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:customtabs:23.1.1'
     compile 'com.github.machinarius:preferencefragment:0.1.1'
     compile 'se.emilsjolander:stickylistheaders:2.7.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile('com.afollestad.material-dialogs:commons:0.8.0.1@aar') {
+    compile('com.afollestad.material-dialogs:commons:0.8.5.0@aar') {
         transitive = true
     }
     compile fileTree(dir: 'libs', include: ['*.jar'])
