--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
     package="de.robv.android.xposed.installer"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    >
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.ACCESS_SUPERUSER"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -16,7 +15,6 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.XposedInstaller.Light">
-
         <activity
             android:name=".WelcomeActivity"
             android:configChanges="orientation|screenSize"
@@ -82,11 +80,14 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="de.robv.android.xposed.installer.DOWNLOAD_DETAILS"/>
+
                 <data android:scheme="package"/>
+
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
+
                 <data
                     android:host="repo.xposed.info"
                     android:pathPrefix="/module/"
@@ -96,12 +97,10 @@
                 <category android:name="android.intent.category.BROWSABLE"/>
             </intent-filter>
         </activity>
-
         <activity android:name=".SettingsActivity"/>
-
         <activity android:name=".SupportActivity"/>
-
         <activity android:name=".AboutActivity"/>
+        <activity android:name=".ModulesBookmark"/>
 
         <receiver
             android:name=".PackageChangeReceiver"
@@ -114,7 +113,6 @@
                 <data android:scheme="package"/>
             </intent-filter>
         </receiver>
-
         <receiver
             android:name=".DownloadReceiver"
             android:exported="true"
@@ -123,7 +121,6 @@
                 <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
             </intent-filter>
         </receiver>
-
         <receiver
             android:name=".util.NotificationUtil$RebootReceiver"
             android:exported="false"/>
