--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
 
     lintOptions {
         abortOnError false
@@ -29,15 +29,13 @@ repositories {
 }
 
 dependencies {
-    compile 'com.android.support:cardview-v7:23.2.1'
-    compile 'com.android.support:recyclerview-v7:23.2.1'
-    compile 'com.android.support:design:23.2.1'
-    compile 'com.android.support:customtabs:23.2.1'
+    compile 'com.android.support:cardview-v7:23.4.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:customtabs:23.4.0'
+    compile 'com.afollestad.material-dialogs:commons:0.8.5.8'
     compile 'com.github.machinarius:preferencefragment:0.1.1'
     compile 'se.emilsjolander:stickylistheaders:2.7.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile('com.github.afollestad.material-dialogs:commons:0.8.5.6@aar') {
-        transitive = true
-    }
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
