--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.0"
 
     lintOptions {
         abortOnError false
@@ -11,7 +11,7 @@ android {
     defaultConfig {
         applicationId "de.robv.android.xposed.installer"
         minSdkVersion 16
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 37
         versionName "3.0 alpha4 by dvdandroid - 06/06/16"
         project.ext.set("archivesBaseName", "XposedInstaller_by_dvdandroid");
@@ -28,11 +28,15 @@ repositories {
     maven { url "https://jitpack.io" }
 }
 
+ext {
+    SUPPORT_LIBRARIES = "24.0.0"
+}
+
 dependencies {
-    compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:customtabs:23.4.0'
+    compile "com.android.support:cardview-v7:$SUPPORT_LIBRARIES"
+    compile "com.android.support:recyclerview-v7:$SUPPORT_LIBRARIES"
+    compile "com.android.support:design:$SUPPORT_LIBRARIES"
+    compile "com.android.support:customtabs:$SUPPORT_LIBRARIES"
     compile 'com.afollestad.material-dialogs:commons:0.8.5.8'
     compile 'com.github.machinarius:preferencefragment:0.1.1'
     compile 'se.emilsjolander:stickylistheaders:2.7.0'
