--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
-
-    lintOptions {
-        abortOnError false
-    }
+    compileSdkVersion 24
+    buildToolsVersion "24.0.2"
 
     defaultConfig {
         applicationId "de.robv.android.xposed.installer"
-        minSdkVersion 16
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 37
-        versionName "3.0 alpha4 by dvdandroid - 23/06/16"
-        project.ext.set("archivesBaseName", "XposedInstaller_by_dvdandroid");
+        versionName "3.0 alpha4"
     }
 
     buildTypes {
@@ -24,18 +19,14 @@ android {
     }
 }
 
-repositories {
-    maven { url "https://jitpack.io" }
-}
-
 dependencies {
-    compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:customtabs:23.4.0'
-    compile 'com.afollestad.material-dialogs:commons:0.8.6.1'
-    compile 'com.github.machinarius:preferencefragment:0.1.1'
+    compile 'com.android.support:cardview-v7:24.2.0'
+    compile 'com.android.support:design:24.2.0'
+    compile 'com.android.support:customtabs:24.2.0'
+    compile 'com.android.support:support-v13:24.2.0'
+    compile 'com.afollestad.material-dialogs:commons:0.9.0.1'
     compile 'se.emilsjolander:stickylistheaders:2.7.0'
-    compile 'eu.chainfire:libsuperuser:1.0.0.201607041850'
+    compile 'eu.chainfire:libsuperuser:1.0.0.201608240809'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'de.psdev.licensesdialog:licensesdialog:1.8.1'
     compile fileTree(dir: 'libs', include: ['*.jar'])
