Enabled pseudo locales in the debug build

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,9 @@ android {
         release {
             minifyEnabled false
         }
+        debug {
+            pseudoLocalesEnabled true
+        }
     }
 }
 
