Enable Proguard again

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
             pseudoLocalesEnabled true
