--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         applicationId "de.robv.android.xposed.installer"
@@ -25,10 +25,10 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:customtabs:25.3.1'
-    compile 'com.android.support:support-v13:25.3.1'
+    compile 'com.android.support:cardview-v7:26.0.0-alpha1'
+    compile 'com.android.support:design:26.0.0-alpha1'
+    compile 'com.android.support:customtabs:26.0.0-alpha1'
+    compile 'com.android.support:support-v13:26.0.0-alpha1'
     compile 'com.afollestad.material-dialogs:commons:0.9.0.2'
     compile 'se.emilsjolander:stickylistheaders:2.7.0'
     compile 'eu.chainfire:libsuperuser:1.0.0.201608240809'
