--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
 
     defaultConfig {
         applicationId "de.robv.android.xposed.installer"
@@ -25,14 +24,14 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:customtabs:25.3.1'
-    compile 'com.android.support:support-v13:25.3.1'
-    compile 'com.afollestad.material-dialogs:commons:0.9.0.2'
-    compile 'se.emilsjolander:stickylistheaders:2.7.0'
-    compile 'eu.chainfire:libsuperuser:1.0.0.201608240809'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'de.psdev.licensesdialog:licensesdialog:1.8.1'
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:cardview-v7:25.4.0'
+    implementation 'com.android.support:design:25.4.0'
+    implementation 'com.android.support:customtabs:25.4.0'
+    implementation 'com.android.support:support-v13:25.4.0'
+    implementation 'com.afollestad.material-dialogs:commons:0.9.0.2'
+    implementation 'se.emilsjolander:stickylistheaders:2.7.0'
+    implementation 'eu.chainfire:libsuperuser:1.0.0.201608240809'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'de.psdev.licensesdialog:licensesdialog:1.8.1'
+    compileOnly fileTree(dir: 'libs', include: ['*.jar'])
 }
